--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,23 +1,22 @@
 html {
     scroll-behavior: smooth;
-  }
-* {
-  font-family: "MuseoModerno";
-  /* font-family: "Niramit"; */
-  text-align: center;
-  overflow-x: hidden;
 }
 
-body
-{
+* {
+    font-family: "MuseoModerno";
+    /* font-family: "Niramit"; */
+    text-align: center;
+    overflow-x: hidden;
+}
+
+body {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
 }
 
-.container
-{
-    width: 600px;
+.container {
+    width: 450px;
     height: auto;
     display: flex;
     justify-items: center;
@@ -25,120 +24,112 @@ body
     flex-direction: column;
     gap: 2rem;
     transition: all 0.2s ease;
-    background-color: #FAF1F0; /* Màu nền của popup */
+    background-color: #ffffff; /* Màu nền của popup */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Hiệu ứng bóng đổ cho popup */
-    padding: 20px; 
+    padding: 20px;
     overflow-x: hidden;
 }
 
-.head
-{
+.head {
     height: auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom: #DB4133 solid 3px;
-
+    border-bottom: #db4133 solid 3px;
 }
 
-.material-symbols-outlined
-{
+.material-symbols-outlined {
     overflow-y: hidden;
     cursor: pointer;
 }
 
-.logo-title
-{
+.logo-title {
     display: flex;
     align-items: center;
     width: fit-content;
     gap: 1.5rem;
-    color: #DB4133;
+    color: #db4133;
 }
 
-.logo{
+.logo {
     width: 10%;
     height: auto;
     border-radius: 50%;
     border: none;
-    object-fit:contain;
+    object-fit: contain;
 }
 
-#hide-btn{
+#hide-btn {
     width: fit-content;
     height: fit-content;
     font-size: 30px;
     overflow-y: hidden;
 }
 
-.body-c
-{
+.body-c {
     display: flex;
     flex-direction: column;
     gap: 20px;
 }
 
-.preview
-{
+.preview {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-content: center;
 }
 
-.ele-preview
-{
+.ele-preview {
     width: 40%;
     height: 40%;
     object-fit: contain;
     border: none;
-    
 }
 
-.google-input
-{
+.google-input {
     display: flex;
     flex-direction: column;
     gap: 1px;
 }
-.search-bar
-{
+.search-bar {
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-#search-icon
-{
-    position:absolute;
+#search-icon {
+    position: absolute;
     left: 21%;
     color: #a0a0a0;
     /* z-index:  999; */
 }
-#search-static
-{
+#search-static {
     width: 60%;
     height: 2rem;
     border: #ccc solid 1px;
     border-radius: 25px;
 }
-.upcoming-events h2, .doodle-newest h2, .all-doodle h2{
-    color: #DB4133; /* Đổi màu chữ */
+.upcoming-events h2,
+.doodle-newest h2,
+.all-doodle h2 {
+    color: #db4133; /* Đổi màu chữ */
     font-family: museomoderno; /* Đổi font chữ */
     /* font-family: "Niramit"; */
     text-align: left; /* Căn chữ bên trái */
+    padding: 0;
+    border-bottom: #c25757 2px solid;
 }
-.box-doodle
-{
+.box-doodle {
     display: flex;
     flex-wrap: nowrap;
     align-content: center;
     justify-content: center;
-    height: 165px;
+    /* width: 100%; */
+    height: 140px;
     align-items: center;
     /* overflow-x: scroll; */
     white-space: nowrap;
-    gap: 8px;
+    gap: 20px;
 }
 .btn {
     cursor: pointer;
@@ -151,27 +142,37 @@ body
 }
 /*button*/
 
-.button-container{
+.button-container {
     text-align: center;
     align-items: center;
     border-radius: 8px;
-    background-color: #DB4133;
+    background-color: #db4133;
     width: 65%;
     margin: auto;
 }
-#changeDoodle{
+#form-change {
+    display: flex;
+    flex-direction: column;
+}
+#changeDoodle {
+    cursor: pointer;
     text-align: center;
     align-items: center;
     border-radius: 8px;
-    background-color: #DB4133;
-    width: 65%;
+    background-color: #db4133;
+    /* width: 65%; */
+    padding: 10px;
+    padding-inline: 20px;
     margin: auto;
     color: #fff;
     margin-top: 10px;
+    border: none;
 }
-.button-container .button{
-    background-color: #FFCACA;
-    font-weight:  bold;
+#changeDoodle {
+}
+.button-container .button {
+    background-color: #ffcaca;
+    font-weight: bold;
     border: none;
     height: 35px;
     width: 48%;
@@ -180,11 +181,11 @@ body
 }
 
 /*Search*/
-.search{
+.search {
     text-align: right;
 }
 #myInput {
-    background-image: url('/img/magnifying-glass-solid.svg'); /* Add a search icon to input */
+    background-image: url("/img/magnifying-glass-solid.svg"); /* Add a search icon to input */
     background-size: 18px; /* Adjust the size of the background image */
     background-position: 10px 5px; /* Position the search icon */
     background-repeat: no-repeat; /* Do not repeat the icon image */
@@ -196,7 +197,7 @@ body
     background-color: #ec9999;
     border-radius: 50px;
     text-align: left;
-  }
+}
 
 /*slider*/
 
@@ -206,15 +207,15 @@ body
     height: 10px;
     background: #ecb1b1;
     outline: none;
-    border-radius: 5px;  
+    border-radius: 5px;
     opacity: 0.7;
-    -webkit-transition: .2s;
-    transition: opacity .2s;
+    -webkit-transition: 0.2s;
+    transition: opacity 0.2s;
 }
 .slider:hover {
     opacity: 1;
 }
-.slider-button{
+.slider-button {
     font-weight: bold;
     font-size: 50px;
     padding: auto;
@@ -224,11 +225,11 @@ body
     appearance: none;
     width: 10px;
     height: 10px;
-    border-radius: 50%; 
+    border-radius: 50%;
     background: #c7142c;
     cursor: pointer;
-  }
-  
+}
+
 .slider::-moz-range-thumb {
     width: 25px;
     height: 25px;
@@ -238,9 +239,8 @@ body
 }
 
 /* change-size */
-  
-.change-size
-{
+
+.change-size {
     display: flex;
     gap: 10px;
     align-content: center;
@@ -253,8 +253,7 @@ body
     margin: 20px;
 }
 
-.change-size input
-{
+.change-size input {
     width: 25%;
     color: #ff6060;
 }
@@ -264,10 +263,11 @@ body
     cursor: pointer; /* Đặt kiểu con trỏ thành ngón tay trỏ */
 }
 
-
-.doodle-upcoming, .doodle-newest, .all-doodle{
+.doodle-upcoming,
+.doodle-newest,
+.all-doodle, .your-doodle {
     display: inline-block;
-    width: 570px;
+    width: 400px;
     height: 5.5rem;
     gap: 13px;
     justify-content: center;
@@ -284,26 +284,24 @@ body
     width: 10rem;
     height: 5rem;
     object-fit: cover;
-    border: 3px #FAF1F0 solid;
+    border: 3px #c1d8ed solid;
     border-radius: 3px;
     transition: all 0.3s ease;
     overflow: hidden;
 }
-.ele:hover
-{
+.ele:hover {
     cursor: pointer;
     object-fit: contain;
     box-shadow: #c25757 2px 6px 3px;
 }
-.doodle{
+.doodle {
     display: inline-flex;
     overflow: hidden;
     margin-right: 10px;
     /* gap: 10px; */
     transition: all 0.3s ease;
 }
-.doodle:hover
-{
+.doodle:hover {
     cursor: pointer;
     /* object-fit: contain; */
     box-shadow: #c25757 2px 6px 0px;
@@ -313,14 +311,117 @@ body
     display: none;
 }
 
-.title-doodle
-{
+.title-doodle {
     font-size: 18px;
     font-weight: bold;
 }
 
-.check img
-{
+.check img {
     border: 3px #ff6060 solid;
 }
 
+.upload-box {
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: auto;
+    height: 200px;
+    border: #c25757 2px solid;
+    border-radius: 8px;
+    border-style: dashed;
+    overflow: hidden;
+}
+.upload-box h1 {
+    color: #b36464;
+    overflow: hidden;
+}
+.upload-box h1:hover {
+    color: #d81313;
+}
+.content1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.content2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* align-items: center; */
+    /* gap: 20px; */
+}
+#uploadDoodle {
+    margin-top: 20px;
+    padding: 10px;
+    background-color: #2bdb66;
+    color: #ffffff;
+    border-radius: 7px;
+    border: none;
+    font-weight: bold;
+}
+#doodle-input {
+    display: none;
+}
+#form-upload {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+#user-doodle {
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
+}
+#btn-random {
+    cursor: pointer;
+    width: 90%;
+    align-self: center;
+    /* margin-left: auto; */
+    background: rgb(0,16,255);
+    background: linear-gradient(90deg, rgba(0,16,255,1) 0%, rgba(255,0,43,1) 100%);
+    color: #ffffff;
+    font-weight: bold;
+    border-radius: 7px;
+    padding: 6px;
+    border: none;
+    transition: all 0.3s ease;
+    box-shadow: black 1px 2px 1px 3px;
+    margin-top: 10px;
+}
+#btn-random:hover{
+    box-shadow: black 1px 0px 1px 0px;
+
+}
+.toggle-default-change{
+    display: flex;
+    gap: 15px;
+    background-color: #ccc;
+    width: 89px;
+    height: auto;
+    justify-content: space-between;
+    margin-left: auto;
+    border-radius: 17px;
+    padding-inline: 2px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+}
+#offDefault, #onDefault{
+    background-color: #2bdb66;
+    border-radius: 17px;
+    width: 35px;
+    height: 35px;
+    overflow: hidden;
+    text-align: center;
+    border: none;
+    color: #fff;
+    font-weight: bold;
+}
+#offDefault{
+    background-color: #cf354a;
+}
+#onDefault{
+    display: none;
+}
