--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,12 +7,14 @@ html {
     /* font-family: "Niramit"; */
     text-align: center;
     overflow-x: hidden;
+    scroll-behavior: smooth;
 }
 
 body {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
+    scroll-behavior: smooth;
 }
 
 .container {
@@ -69,7 +71,7 @@ body {
 .body-c {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
 }
 
 .preview {
@@ -77,14 +79,28 @@ body {
     flex-direction: column;
     justify-content: center;
     align-content: center;
+    width: 80%; /* Adjusted from a smaller percentage or fixed width */
+    height: 200px;
+    margin: auto;
+    padding: 20px; /* Provides space around the contents */
+    border: 1px solid #ccc; /* Optional: adds a border for visual structure */
+    border-radius: 8px;
+    align-items: center;
+    overflow: hidden;
 }
-
+.doodle-preview{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+}
 .ele-preview {
-    width: 40%;
-    height: 40%;
+    max-width: 100%;
+    height: auto;
     object-fit: contain;
     border: none;
     transition: all 0.2s ease-in-out;
+    transform-origin: bottom;
 }
 
 .google-input {
@@ -148,7 +164,7 @@ body {
     align-items: center;
     border-radius: 8px;
     background-color: #db4133;
-    width: 65%;
+    width: 350px;
     margin: auto;
 }
 #form-change {
@@ -160,7 +176,7 @@ body {
     text-align: center;
     align-items: center;
     border-radius: 8px;
-    background-color: #db4133;
+    background-color: #1e883c;
     /* width: 65%; */
     padding: 10px;
     padding-inline: 20px;
@@ -169,8 +185,12 @@ body {
     margin-top: 10px;
     border: none;
 }
+#changeDoodle:hover{
+    background-color: #37ae66; /* Màu nền khi di chuột qua nút */
+    transition: background-color 0.2s ease-in-out; /* Làm mượt hiệu ứng thay đổi màu nền */
+}
 
-.button-container .button {
+.button {
     background-color: #ffcaca;
     font-weight: bold;
     border: none;
@@ -178,8 +198,8 @@ body {
     width: 48%;
     border-radius: 5px;
     margin: 6px 0px 6px 0px;
+    transition: all 0.2s ease;
 }
-
 /*Search*/
 .search {
     text-align: right;
@@ -246,15 +266,14 @@ body {
     align-content: center;
     justify-content: center;
     color: #ff6060;
-
     text-align: center;
     font-weight: bold;
     align-items: center;
-    margin: 20px;
+    /* margin: 20px; */
 }
 
 .change-size input {
-    width: 25%;
+    width: 50%;
     color: #ff6060;
 }
 
@@ -272,14 +291,12 @@ body {
     height: 5.5rem;
     gap: 13px;
     justify-content: center;
-    /* flex-wrap: nowrap; */
-    /* overflow-x: hidden; */
-    /* overflow-x:scroll; */
+    overflow-x: hidden;
     overflow-y: hidden;
     position: relative;
     white-space: nowrap;
+    transition: all 0.3s ease; /* Thêm hiệu ứng chuyển đổi mượt mà */
 }
-
 .ele {
     display: flex;
     width: 10rem;
@@ -333,6 +350,10 @@ body {
     border-radius: 8px;
     border-style: dashed;
     overflow: hidden;
+    margin-bottom: 20px;
+}
+.upload-box a {
+    text-decoration: none;
 }
 .upload-box h1 {
     color: #b36464;
@@ -345,22 +366,28 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    transition: all 0.2s ease;
 }
 .content2 {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    transition: all 0.2s ease;
     /* align-items: center; */
     /* gap: 20px; */
 }
 #uploadDoodle {
     margin-top: 20px;
     padding: 10px;
-    background-color: #2bdb66;
     color: #ffffff;
     border-radius: 7px;
     border: none;
     font-weight: bold;
+    background-color: #1e883c;
+}
+#uploadDoodle:hover {
+    background-color: #37ae66;
+    transition: all 0.2s ease;
 }
 #doodle-input {
     display: none;
@@ -435,40 +462,87 @@ body {
 #btn-random-change:hover {
     box-shadow: rgb(255,115,115) 1px 0px 1px 0px;
 }
+.on-off-mode {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}   
 .toggle-default-change {
     display: flex;
     gap: 15px;
     background-color: #ccc;
-    width: 89px;
-    height: auto;
+    width: 70px;
+    height: fit-content;
     justify-content: space-between;
     margin-left: auto;
     border-radius: 17px;
     padding-inline: 2px;
-    padding-top: 2px;
-    padding-bottom: 2px;
-    margin-top: -20px;
+    /* margin-top: -20px; */
     cursor: pointer;
 }
 #offDefault,
 #onDefault {
     background-color: #2bdb66;
     border-radius: 17px;
-    width: 35px;
-    height: 35px;
+    width: 30px;
+    height: 30px;
     overflow: hidden;
     text-align: center;
     border: none;
     color: #fff;
     font-weight: bold;
     cursor: pointer;
+    font-size: 11px;
+    text-align: center;
 }
 #offDefault {
     background-color: #cf354a;
 }
 
 .title-mode {
-    color: #db4133;
+    color: #404040;
     font-size: 18px;
     margin-left: auto;
+}
+.fake-search-bar {
+    width: 80%;
+    max-width: 600px; 
+    background: #fff;
+    border: 1px solid #dfe1e5;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+    border-radius: 24px;
+    display: flex;
+    align-items: center;
+    padding: 2px 20px;
+    overflow: hidden;
+}
+
+.fake-search-bar input {
+    flex: 1;
+    border: none;
+    font-size: 12px;
+    outline: none;
+    overflow: hidden;
+}
+
+.search-button, .lucky-button {
+    background-color: #e9e9e9f5;
+    border: 1px solid #f8f9fa;
+    color: rgba(0,0,0,0.87);
+    margin-left: 10px;
+    font-size: 12px;
+    cursor: pointer;
+    border-radius: 2px;
+    outline: none;
+}
+
+.fake-button-container {
+    margin-top: 10px;
+    overflow: hidden;
+}
+
+.search-button:hover, .lucky-button:hover {
+    border: 1px solid #c6c6c6;
+    background-color: #f0f0f0;
 }
